<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent">

    <ListPreference
        android:key= "@string/sort_category_pref_key"
        android:title="@string/sort_category_pref_title"
        android:entries="@array/sort_category_pref_options"
        android:entryValues="@array/sort_category_pref_values"
        android:defaultValue="@string/sort_category_value_popularity"/>

    <ListPreference
        android:key="@string/sort_order_pref_key"
        android:title="@string/sort_order_pref_title"
        android:entries="@array/sort_order_pref_options"
        android:entryValues="@array/sort_order_pref_values"
        android:defaultValue="@string/sort_order_value_asc"/>

</PreferenceScreen>